--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.1.2",
   "description": "Rise data counter component",
   "scripts": {
+    "preinstall": "npx npm-force-resolutions",
     "prebuild": "eslint .",
     "build": "polymer build && ./node_modules/rise-common-component/scripts/extract-source.sh rise-data-counter",
     "pretty": "eslint . --fix",
@@ -42,5 +43,9 @@
     "sinon": "^7.3.2",
     "wct-istanbul": "^0.14.3",
     "wct-mocha": "^1.0.0"
+  },
+  "resolutions": {
+    "braces": "^2.3.1",
+    "handlebars": "^4.4.5"
   }
 }
